# python-port-adapter

./: .gitignore  README.md  activate.ps1  activate.sh  api.rest  pyproject.toml
src/: api.py  db.py  main.py  models.py  new_api.py  old_api.py  test.py
src/adapters/: sqlalchemy_inventory.py
src/domain/: errors.py  ports.py  use_cases.py
tests/: test_model_quantity.py  test_model_sku.py
